support visualization of map for gis files

--- a/adma_geo/templates/base.html
+++ b/adma_geo/templates/base.html
@@ -144,6 +144,10 @@
             color: var(--adma-red);
         }
 
+        .gis-icon {
+            color: #007bff;
+        }
+
         .file-icon {
             color: var(--adma-dark-grey);
         }
